<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@id/nav_profile"
            android:icon="@drawable/ic_baseline_person_pin_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@id/nav_chats"
            android:icon="@drawable/ic_baseline_chat_24"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_appointment"
            android:icon="@drawable/ic_baseline_schedule_24"
            android:title="@string/menu_schedule" />
    </group>
</menu>