<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.lucky.smartclinic.ui.fragments.profile.ProfileFragment"
        android:label="@string/Profile"
        tools:layout="@layout/user_profile_layout" />

    <fragment
        android:id="@+id/nav_chats"
        android:name="com.lucky.smartclinic.ui.fragments.chats.ChatDoctorsListFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_doctor_chats_list">
        <action
            android:id="@+id/action_nav_chats_to_chatFragment"
            app:destination="@id/chatFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_appointment"
        android:name="com.lucky.smartclinic.ui.fragments.appointments.AppointmentsFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_appointment" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.lucky.smartclinic.ui.fragments.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_doctorProfileFragment"
            app:destination="@id/doctorProfileFragment" />
        <action
            android:id="@+id/action_nav_home_to_newsDetailsFragment"
            app:destination="@id/newsDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.lucky.smartclinic.ui.fragments.chats.ChatFragment"
        android:label="ChatFragment"
        tools:layout="@layout/fragment_chat">
        <argument
            android:name="doctor"
            app:argType="com.lucky.smartclinic.model.Doctor" />
    </fragment>
    <fragment
        android:id="@+id/doctorProfileFragment"
        android:name="com.lucky.smartclinic.ui.fragments.home.doctor.DoctorProfileFragment"
        android:label="fragment_doctor_profile"
        tools:layout="@layout/doctor_profile_layout">
        <action
            android:id="@+id/action_doctorProfileFragment_to_chatFragment"
            app:destination="@id/chatFragment" />
        <argument
            android:name="doctor"
            app:argType="com.lucky.smartclinic.model.Doctor" />
    </fragment>
    <fragment
        android:id="@+id/newsDetailsFragment"
        android:name="com.lucky.smartclinic.ui.fragments.home.news.NewsDetailsFragment"
        android:label="News Details"
        tools:layout="@layout/fragment_news_details">
        <argument
            android:name="newsArticle"
            app:argType="com.lucky.smartclinic.model.Article" />
    </fragment>
</navigation>